--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "esdoc": "^1.1.0",
     "esdoc-integrate-test-plugin": "^1.0.0",
     "esdoc-standard-plugin": "^1.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "mocha": "^6.0.2",
     "nyc": "^13.3.0",
     "rollup": "^1.9.0",
